# spdlite

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE.md  README.md
.github/workflows/: ci.yml
bench/: caller_zoo.cpp  formatter_bench.cpp  latency.cpp  vs_spdlog.cpp
cmake/: utils.cmake
docs/superpowers/plans/: 2026-05-21-compile-time-level-gate.md
docs/superpowers/specs/: 2026-05-21-compile-time-level-gate-design.md
example/: CMakeLists.txt  example.cpp
include/spdlite/: common.h  formatter.h  logger.h  spdlite.h
include/spdlite/sinks/: basic_file_sink.h  color_sink.h  console_sink.h  file_sink.h  null_sink.h  rotating_file_sink.h  shared_sink.h  simple_file_sink.h  stdout_color_sink.h  stdout_sink.h
tests/: CMakeLists.txt  helpers.h  test_file_sink.cpp  test_formatter.cpp  test_level.cpp  test_log_macros_off.cpp  test_log_macros_trace.cpp  test_log_macros_warn.cpp  test_logger.cpp  test_null_sink.cpp  test_rotating_file_sink.cpp  test_shared_sink.cpp  test_thread_safety.cpp
tests/support/: capture_sink.h  tmpdir.h
